--- a/app/assets/stylesheets/section/how_to.scss
+++ b/app/assets/stylesheets/section/how_to.scss
@@ -130,3 +130,7 @@
     font-weight: bold;
   }
 }
+
+.content { 
+width:970px !important;
+}
