--- a/app/assets/stylesheets/section/suggestions.scss
+++ b/app/assets/stylesheets/section/suggestions.scss
@@ -254,3 +254,5 @@ ul.breadcrumb {
   }
 }
 
+.content{width:970px !important;}
+
